<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fff8f8fa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:id="@+id/request"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ff007aff"
                android:gravity="center"
                android:onClick="doRequest"
                android:text="@string/request"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/response"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ffa8afc3"
                android:gravity="center"
                android:onClick="doResponse"
                android:text="@string/response"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <TextView
            android:id="@+id/requestContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="@dimen/dp_3"
            android:padding="@dimen/dp_16"
            android:textIsSelectable="true"
            android:textSize="@dimen/sp_14"
            tools:text="@string/test" />

        <TextView
            android:id="@+id/responseContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingExtra="@dimen/dp_3"
            android:padding="@dimen/dp_16"
            android:textIsSelectable="true"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            tools:text="@string/test" />
    </LinearLayout>
</ScrollView>
